Bug 286614 - konsole search function ignores leading spaces
Summary: konsole search function ignores leading spaces
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.7.999
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-14 18:54 UTC by qqqqqqqqq9
Modified: 2011-11-20 13:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description qqqqqqqqq9 2011-11-14 18:54:01 UTC
Version:           2.7.999 (using Devel) 
OS:                Linux

Searching for e.g. "kdepim " or " kdepim" finds kdepimlibs which it shouldn't. 

Reproducible: Always

Steps to Reproduce:
1. produce konsole output which contains the words kdepim and kdepimlibs (e.g. compile KDE SC)
2. Search for "kdepim "

Actual Results:  
kdepimlibs is in the result list

Expected Results:  
only kdepim should be in the result list.
Comment 1 Jekyll Wu 2011-11-20 06:07:35 UTC
Git commit a3744135fc072ab13deb918c91493a6c6bc0dae1 by Jekyll Wu.
Committed on 20/11/2011 at 06:09.
Pushed by jekyllwu into branch 'master'.

Respect leading and trailing white spaces in the search string

BUG:286614
FIXED-IN:4.8

M  +1    -1    src/SessionController.cpp

http://commits.kde.org/konsole/a3744135fc072ab13deb918c91493a6c6bc0dae1
Comment 2 Kurt Hindenburg 2011-11-20 13:40:42 UTC
Git commit 341a959cb4349fe18fdacec49992fe288d8fe0fc by Kurt Hindenburg, on behalf of Jekyll Wu.
Committed on 20/11/2011 at 06:09.
Pushed by hindenburg into branch 'KDE/4.7'.

Respect leading and trailing white spaces in the search string

BUG:286614
FIXED-IN:4.8
(cherry picked from commit a3744135fc072ab13deb918c91493a6c6bc0dae1)

M  +1    -1    src/SessionController.cpp

http://commits.kde.org/konsole/341a959cb4349fe18fdacec49992fe288d8fe0fc