Respect leading and trailing white spaces in the search string

BUG:286614
FIXED-IN:4.8
(cherry picked from commit a3744135fc072ab13deb918c91493a6c6bc0dae1)